fix spacing issues in sections

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -80,7 +80,7 @@
         }
 
         .navListItems {
-            padding-top: 5vh;
+            padding-top: 5em;
             flex-direction: column;
             justify-content: center;
             align-items: center;
